--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
          <div class="header">
              <div class="header__top">
                  <div class="header__top-menu-item">
-                     <div>1</div>
+                     <div></div>
                      <div></div>
                      <div></div>
                  </div>
